--- a/index.html
+++ b/index.html
@@ -307,7 +307,10 @@
             </div><!-- /rm-container -->
 
           </section>
+          <span class="row justify-content-center">
 
+            <button type="button" class="pulse-white" onclick="prikaziRezervaciju()">REZERVIŠITE</button>
+          </span>
         </div>
         <!-- jQuery -->
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
