Sminka na rezervaciji

--- a/rezervacija.html
+++ b/rezervacija.html
@@ -20,6 +20,7 @@
     <div class="container m-auto align-items-center rounded-bottom border border-warning text-dark">
 
             <h1 id="naslov" class="text-center mt-5">REZERVACIJA -<span id="brojstola"> sto br.</span></h1>
+            <h2 id="podnaslov"class="text-center mt-5"></h2>
             <form id="unos" class="container mt-5 " autocomplete="off" onsubmit="upis(this);hvala();return false">
                 
                 <div class="form-row justify-content-center">
