moraju da se srede baneri

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="restoran, Zrenjanina, kuhinja, ambijent, tradicionalnoj, modernoj, REZERVIŠITE">
-    <meta name="description" content="restoran">
+    <meta name="keywords" content="restoran,restoran Zrenjanin, kuhinja, ambijent, tradicionalno, moderno, REZERVIŠITE, hrana, jelo">
+    <meta name="description" content="Restoran Sharage, smesten u Zrenjaninu, obliluje bogatom tradicionalno modernom kuhinjom,a komfor pruza modernim ambijentom, mesto gde cete se osecati kao kod kuce je upravo nas restoran. U ponudi imamo velik izbor jela, od hladnih predjela, preko glavnim jela do dezerta.">
     <meta name="author" content="Goran Malenić, Verica Milatović, Filip Jungić, Monika Čeke, Bojan Ramić">
-    <title>Restoran Sharage</title>
+    <title>Restoran Sharage, spoj nespojivog, tradicionalnog i modernog, kuhinja i ambijent kakav nigde necete naci</title>
     <!--Izmenila sam ikonicu-Verica-->
     <link rel="icon" href="slike/logo100.png">
     <!-- Bootstrap CSS -->
@@ -124,7 +124,8 @@
       </div>
         <!--Prelaz sa strane na stranu-->
         <!--kraj stranice o nama-->
-        <p class="comment col-lg-8 col-md-8 col-sm-12 col-12 ml-auto text-justify">"Vrlo prijatan ambijent, moderan, a možete uživati i u modernoj i tradicionalnoj kuhinji, osoblje je za svaku pohvalu, od konobara, preko kuvara, do poslastičara"</p>
+       
+        <p class="comment col-lg-8 col-md-8 col-sm-12 col-12 ml-auto text-right m-5">"Vrlo prijatan ambijent, moderan, <br> a možete uživati i u modernoj<br> i tradicionalnoj kuhinji, osoblje je <br>za svaku pohvalu, od konobara, <br>preko kuvara, do poslastičara"</p>
 
             <!--REZERVACIJA KONTAKT-->
             <div id="bg_mask">
@@ -160,8 +161,9 @@
 
         <!--Prelaz-->
         <div>
-            <p class="comment col-lg-8 col-md-8 col-sm-12 col-12 mr-auto text-justify">"Kad god dođem do Zrenjanina obavezno posetim ovaj restoran,  mislim da takav ambijent i kuhinja ne postoje nigde" </p>
+            <p class="comment col-lg-8 col-md-8 col-sm-12 col-12 mr-auto text-justify m-5">"Kad god dođem do Zrenjanina <br>obavezno posetim ovaj restoran,<br>  mislim da takav ambijent i kuhinja <br>ne postoje nigde" </p>
         </div>
+        
 
         <!-- JELOVNIK SEKCIJA -->
         <div  class="jelovnik">
@@ -344,17 +346,18 @@
     </div>
         <!--FOOTER-->
         <footer class="row align-middle" >
+          Posetite i nase verne partnere:  
             <div class="col-sm-3 col-12 ">
-                <img class="card-img-top">Baner1
+                <a href="#"><img class="card-img-top" src="slike/camera.png">Vasa slavlja u nasem restoranu zabelezice FEZR&trade;</a>
             </div>
             <div class="col-sm-3 col-12">
-                <img class="card-img-top">Baner2
+                <a href="#"><img class="card-img-top" src="slike/fika.png">Kafa kojom se mozete osveziti stize od naseg prijatelja Fika cafe-a</a>
             </div>
             <div class="col-sm-3 col-12">
-                <img class="card-img-top">Baner3
+                <a href="#"><img class="card-img-top" src="slike/frontend.png">Da zabava bude jos bolja tu je FrontEnd distilery</a>
             </div>
             <div class="col-sm-3 col-12">
-                <img class="card-img-top">Baner4
+                <a href="#"><img class="card-img-top" src="slike/freetanica.png">Za tecan engleski govor naseg osoblja zahvaljujemo Freetanici</a>
             </div>
             <div class="social row">
                 <a href="#" class="icon"><i class="fab fa-instagram"></i></a>
