dodat jedan <br> kod fotografa dole levo, da svi budu u liniji :)

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
     <div class=" col-lg-3  col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">  
-        <p class="card-subtitle text-muted text-center"><q> Ne verujem rečima, verujem slikama!</q></p>
+        <p class="card-subtitle text-muted text-center"><q> Ne verujem rečima, verujem slikama!</q></p><br>
         <a href="#"><img class="img-thumbnail " width="100px" src="slike/camera.png"></a>
       </div>
     </div>
