dodat jedan <br> kod fotografa dole levo, da svi budu u liniji :) + dodati linkovi ka ostalim grupama

--- a/index.html
+++ b/index.html
@@ -354,28 +354,28 @@
     <div class=" col-lg-3  col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">  
         <p class="card-subtitle text-muted text-center"><q> Ne verujem rečima, verujem slikama!</q></p><br>
-        <a href="#"><img class="img-thumbnail " width="100px" src="slike/camera.png"></a>
+        <a href="http://www.fedzr.tk/grupa1"><img class="img-thumbnail " width="100px" src="slike/camera.png"></a>
       </div>
     </div>
 
     <div class="col-lg-3 col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">
         <p class="card-subtitle text-muted text-center"><q>Šoljica kafe raspriča i najvećeg ćutljivca.</q></p>
-        <a href="#"><img class="img-thumbnail" width="100px" src="slike/fika.png"></a>
+        <a href="http://www.fedzr.tk/grupa2"><img class="img-thumbnail" width="100px" src="slike/fika.png"></a>
       </div>
     </div>
 
     <div class="col-lg-3  col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">
         <p class="card-subtitle text-muted text-center"><q>Kupac zaslužuje da primi tačno što smo obećali proizvesti.</q></p>
-        <a href="#"><img class="img-thumbnail align-middle" width="100px" src="slike/frontend.png"></a>
+        <a href="http://www.fedzr.tk/grupa3"><img class="img-thumbnail align-middle" width="100px" src="slike/frontend.png"></a>
       </div>
     </div>
 
     <div class=" col-lg-3 col-md-3 col-sm-6 col-6 " style="width: 18rem;">
       <div class="card-body text-center">
         <p class="card-subtitle text-muted text-center"><q>Čovek je utoliko vredniji koliko jezika govori.</q></p>
-        <a href="#"><img class="img-thumbnail " width="100px" src="slike/freetanica.png"></a>
+        <a href="http://www.fedzr.tk/grupa4"><img class="img-thumbnail " width="100px" src="slike/freetanica.png"></a>
       </div>
     </div>
 </div>
