--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
                 </button>
-                    <div><img class="navbar-toggler border-0" src="slike/logo75.png" alt="logo restorana-restoran sharage-restoran zrenjanin"></div>
+                    <div><img class="navbar-toggler border-0" src="slike/logo75.png" alt="logo restorana"></div>
                 <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item active">
@@ -55,8 +55,8 @@
         <!--Prelaz sa strane na stranu sa par reci o restoranu-->
         <!-- HOME SEKCIJA -->
         <div class="home">
-            <img class="first col-sm-12 col-md-12 col-lg-6 p-0"src="slike/pozadina5.png" alt="restoran sharage-restoran zrenjanin-kuhinja-hrana">
-            <img id="up" class="second d-none d-sm-none d-md-none d-lg-block col-sm-12 col-md-12 col-lg-6" src="slike/pozadina6.png" alt="restoran sharage-restoran zrenjanin-kuhinja-hrana">
+            <img class="first col-sm-12 col-md-12 col-lg-6 p-0"src="slike/pozadina5.png" alt="restoran-hrana-jelo">
+            <img id="up" class="second d-none d-sm-none d-md-none d-lg-block col-sm-12 col-md-12 col-lg-6" src="slike/pozadina6.png" alt="restoran-hrana-jelo">
             <div class="text col-sm-12 col-md-12 col-lg-12 mix-auto">
                 <center><h3>Rezervišite na vreme</h3>
                   <p>..i svratite na fruštuk, jauznu, <br> ili pak, na foršpajs, rinflajš i čušpajs</p>
@@ -100,13 +100,13 @@
            <span class="row justify-content-center text-center">
            <div class="carousel-inner col-lg-8 col-md-8 col-sm-12 col-12">
              <div class="carousel-item active align-middle">
-               <img class="rounded w-75 " src="slike/restaurant.jpg" alt="restoran sharage-restoran zrenjanin-kuhinja-ambijent" height="400">
+               <img class="rounded w-75 " src="slike/restaurant.jpg" alt="ambijent restorana" height="400">
              </div>
              <div class="carousel-item">
-               <img class="rounded w-75" src="slike/restaurant1.jpg" alt="restoran sharage-restoran zrenjanin-kuhinja-ambijent" height="400" >
+               <img class="rounded w-75" src="slike/restaurant1.jpg" alt="ambijent restorana" height="400" >
              </div>
              <div class="carousel-item">
-               <img class="rounded w-75" src="slike/tables.jpg" alt="restoran sharage-restoran zrenjanin-kuhinja-ambijent"  height="400">
+               <img class="rounded w-75" src="slike/tables.jpg" alt="ambijent restorana"  height="400">
              </div>
            </div></span>
            <!-- Left and right controls -->
@@ -133,7 +133,7 @@
               <form id="rezervacija" method="POST" action="" onsubmit="dosubmit(this)">
                 <div class="form-row">
                   <div class="col">
-                    <img src="stolovi/stolovi.png" alt="restoran sharage-restoran zrenjanin-kuhinja-ambijent-rezervacija" usemap="#Mapa" />
+                    <img src="stolovi/stolovi.png" alt="stolovi-rezervacije" usemap="#Mapa" />
                     <map name="Mapa" id="Mapa" width="656" height="377">
                       <area id="sto1" onclick="dosubmit(this);rezervacija.submit(this)" onmouseover="dozvoljeno()" onmouseout="sakrivanje()" alt="" title="" nohref shape="rect" coords="148,44,182,79" />
                       <area id="sto2" onclick="dosubmit(this);rezervacija.submit(this)" onmouseover="dozvoljeno()" onmouseout="sakrivanje()" alt="" title="" nohref shape="rect" coords="259,44,293,78" />
@@ -206,7 +206,7 @@
                         <dt>Punjena jaja</dt>
                         <dd>Jaja, krem sir, majonez, paprika &amp; beli luk</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/hladna-predjela/228-plavi-patlidzan-punjen-sirom" class="rm-viewdetails" data-thumb="images/1.jpg" alt="plavi patlidzan punjen sirom-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana" >Plavi patlidžan punjen sirom</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/hladna-predjela/228-plavi-patlidzan-punjen-sirom" class="rm-viewdetails" data-thumb="images/1.jpg" alt="jelo-hrana" >Plavi patlidžan punjen sirom</a></dt>
                         <dd>Plavi patlidžan punjen sirom sa jajima &amp; puterom</dd>
 
                         <dt>Kukuruzne kocke sa slaninom</dt>
@@ -218,7 +218,7 @@
                         <dt>Kupus salata</dt>
                         <dd>Kupus, maslinovo ulje</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/salate/16346-napuljska-salata" class="rm-viewdetails" data-thumb="images/13.jpg" alt="napuljska salata-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana" >Napuljska salata</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/salate/16346-napuljska-salata" class="rm-viewdetails" data-thumb="images/13.jpg" alt="jelo-hrana" >Napuljska salata</a></dt>
                         <dd>Paradajz, paprika, sir &amp; orah</dd>
 
                         <dt>Šopska salata</dt>
@@ -236,13 +236,13 @@
                     <div class="rm-content">
                       <h4>Glavna jela</h4>
                       <dl>
-                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/20575-mesarski-krompir" class="rm-viewdetails" data-thumb="images/11.jpg" alt="mesarski krompir-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Mesarski krompir</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/20575-mesarski-krompir" class="rm-viewdetails" data-thumb="images/11.jpg" alt="jelo-hrana">Mesarski krompir</a></dt>
                         <dd>Mesarski krompir sa pavlakom &amp; puterom</dd>
 
                         <dt>Lovačke šnicle</dt>
                         <dd>Lovačke šnicle sa u sosu od ribizle</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/36408-belo-meso-sa-kruskama-i-psenicom" class="rm-viewdetails" data-thumb="images/8.jpg" alt="belo meso sa kruskama i psenicom-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Belo meso sa kruškama &amp; pšenicom</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/36408-belo-meso-sa-kruskama-i-psenicom" class="rm-viewdetails" data-thumb="images/8.jpg" alt="jelo-hrana">Belo meso sa kruškama &amp; pšenicom</a></dt>
                         <dd>Belo meso sa kruškama i pšenicom aromatizovano biljnim začinima</dd>
 
                         <dt>Sharage mešano meso</dt>
@@ -251,13 +251,13 @@
                         <dt>Pasulj prebranac</dt>
                         <dd>Pasulj prebranac sa kobasicom</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/17049-belo-meso-u-pavlaci" class="rm-viewdetails" data-thumb="images/4.jpg" alt="belo meso u pavlaci-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Belo meso u pavlaci</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/17049-belo-meso-u-pavlaci" class="rm-viewdetails" data-thumb="images/4.jpg" alt="jelo-hrana">Belo meso u pavlaci</a></dt>
                         <dd>Belo meso u pavlaci sa sirom i jajima</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/9400-makarone-sa-tunjevinom" class="rm-viewdetails" data-thumb="images/3.jpg" alt="makarone sa tunjevinom-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Makarone sa tunjevinom</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/9400-makarone-sa-tunjevinom" class="rm-viewdetails" data-thumb="images/3.jpg" alt="jelo-hrana">Makarone sa tunjevinom</a></dt>
                         <dd>Makarone sa tunjevinom, sirom &amp; kuvanim jajetom</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/26461-teletina-i-pecurke-u-crvenom-sosu" class="rm-viewdetails" data-thumb="images/14.jpg" alt="teletina i pceurke u crvenom sosu-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Teletina i pečurke u crvenom sosu</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/glavna-jela/26461-teletina-i-pecurke-u-crvenom-sosu" class="rm-viewdetails" data-thumb="images/14.jpg" alt="jelo-hrana">Teletina i pečurke u crvenom sosu</a></dt>
                         <dd>Teletina i šampinjoni u crvenom sosu</dd>
                       </dl>
                     </div><!-- /rm-content -->
@@ -276,25 +276,25 @@
                     <div class="rm-content">
                       <h4>Dezerti</h4>
                       <dl>
-                        <dt><a href="https://www.recepti.com/kuvar/kolaci/28777-sljiva-tart" class="rm-viewdetails" data-thumb="images/5.jpg" alt="sljiva tart-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Šljiva Tart</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/kolaci/28777-sljiva-tart" class="rm-viewdetails" data-thumb="images/5.jpg" alt="jelo-hrana">Šljiva Tart</a></dt>
                         <dd>Poslastica od šljive, jogurta &amp; cimeta</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/kolaci/36254-cokoladni-puding-i-puding-sa-nanom" class="rm-viewdetails" data-thumb="images/6.jpg" alt="cokoladni puding-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Čokoladni puding</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/kolaci/36254-cokoladni-puding-i-puding-sa-nanom" class="rm-viewdetails" data-thumb="images/6.jpg" alt="jelo-hrana">Čokoladni puding</a></dt>
                         <dd>Čokoladni puding sa nanom</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/torte/544-dobos-torta" class="rm-viewdetails" data-thumb="images/12.jpg" alt="dobos torta-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Doboš torta</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/torte/544-dobos-torta" class="rm-viewdetails" data-thumb="images/12.jpg" alt="jelo-hrana">Doboš torta</a></dt>
                         <dd>Doboš torta, čokolada, karamela ... </dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/kolaci/9520-pohovane-jabuke" class="rm-viewdetails" data-thumb="images/10.jpg" alt="pohovane jabuke-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Pohovane jabuke</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/kolaci/9520-pohovane-jabuke" class="rm-viewdetails" data-thumb="images/10.jpg" alt="jelo-hrana">Pohovane jabuke</a></dt>
                         <dd>Pohovane jabuke posute cimetom</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/kolaci/23822-cokoladni-kuglof-sa-prelivom-od-ribizle" class="rm-viewdetails" data-thumb="images/7.jpg" alt="cokoladni kuglof sa prelivom od ribizle-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Čokoladni kuglof sa prelivom od ribizle</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/kolaci/23822-cokoladni-kuglof-sa-prelivom-od-ribizle" class="rm-viewdetails" data-thumb="images/7.jpg" alt="jelo-hrana">Čokoladni kuglof sa prelivom od ribizle</a></dt>
                         <dd>Čokoladni kuglof sa prelivom od ribizle</dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/kolaci/358-savijaca-sa-jabukama" class="rm-viewdetails" data-thumb="images/2.jpg" alt="savijaca sa jabukama-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Savijača sa jabukama</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/kolaci/358-savijaca-sa-jabukama" class="rm-viewdetails" data-thumb="images/2.jpg" alt="jelo-hrana">Savijača sa jabukama</a></dt>
                         <dd>Savijača od jabuka u kremi od vanilije </dd>
 
-                        <dt><a href="https://www.recepti.com/kuvar/kolaci/32922-palacinkasti-dezert" class="rm-viewdetails" data-thumb="images/9.jpg" alt="palacinski dezert-restoran sharage-restoran zrenjanin-kuhinja-jelo-hrana">Palačinkasti dezert</a></dt>
+                        <dt><a href="https://www.recepti.com/kuvar/kolaci/32922-palacinkasti-dezert" class="rm-viewdetails" data-thumb="images/9.jpg" alt="jelo-hrana">Palačinkasti dezert</a></dt>
                         <dd>punjeni vanil kremom i prelliveni čokoladom</dd>
                       </dl>
                       <div class="rm-order">
@@ -354,28 +354,28 @@
     <div class=" col-lg-3  col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">  
         <p class="card-subtitle text-muted text-center"><q> Ne verujem rečima, verujem slikama!</q></p><br>
-        <a href="http://www.fedzr.tk/grupa1"><img class="img-thumbnail " width="100px" src="slike/camera.png"></a>
+        <a href="http://www.fedzr.tk/grupa1"><img class="img-thumbnail " width="100px" src="slike/camera.png" alt="logo partnera"></a>
       </div>
     </div>
 
     <div class="col-lg-3 col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">
         <p class="card-subtitle text-muted text-center"><q>Šoljica kafe raspriča i najvećeg ćutljivca.</q></p>
-        <a href="http://www.fedzr.tk/grupa2"><img class="img-thumbnail" width="100px" src="slike/fika.png"></a>
+        <a href="http://www.fedzr.tk/grupa2"><img class="img-thumbnail" width="100px" src="slike/fika.png"alt="logo partnera"></a>
       </div>
     </div>
 
     <div class="col-lg-3  col-md-3 col-sm-6 col-6 border-right" style="width: 18rem;">
       <div class="card-body text-center">
         <p class="card-subtitle text-muted text-center"><q>Kupac zaslužuje da primi tačno što smo obećali proizvesti.</q></p>
-        <a href="http://www.fedzr.tk/grupa3"><img class="img-thumbnail align-middle" width="100px" src="slike/frontend.png"></a>
+        <a href="http://www.fedzr.tk/grupa3"><img class="img-thumbnail align-middle" width="100px" src="slike/frontend.png"alt="logo partnera"></a>
       </div>
     </div>
 
     <div class=" col-lg-3 col-md-3 col-sm-6 col-6 " style="width: 18rem;">
       <div class="card-body text-center">
         <p class="card-subtitle text-muted text-center"><q>Čovek je utoliko vredniji koliko jezika govori.</q></p>
-        <a href="http://www.fedzr.tk/grupa4"><img class="img-thumbnail " width="100px" src="slike/freetanica.png"></a>
+        <a href="http://www.fedzr.tk/grupa4"><img class="img-thumbnail " width="100px" src="slike/freetanica.png"alt="logo partnera"></a>
       </div>
     </div>
 </div>
