--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         <div class=" col-lg-3  col-md-3 col-sm-6 col-6 mx-auto d-block" style="width: 18rem;">
           <div class="card-body text-center">  
             
-            <a href="http://www.fedzr.tk/grupa1"><img class="img-thumbnail border-0" width="100px" src="slike/camera.png"></a>
+            <a href="http://23.95.242.218/Photo/index.html"><img class="img-thumbnail border-0" width="100px" src="slike/camera.png"></a>
           </div>
         </div>
 
@@ -370,7 +370,7 @@
         <div class="col-lg-3  col-md-3 col-sm-6 col-6 mx-auto d-block" style="width: 18rem;">
           <div class="card-body text-center">
             
-            <a href="http://www.fedzr.tk/grupa3"><img class="img-thumbnail border-0" width="100px" src="slike/frontend.png"></a>
+            <a href="http://23.95.242.218/Rakija/index.html"><img class="img-thumbnail border-0" width="100px" src="slike/frontend.png"></a>
           </div>
         </div>
 
